# auto-openspg-schema

./: .gitignore  README.md  app.py  config.py  example_document.txt  pyproject.toml  test_logs.py
examples/: llm_client_usage.py
src/: __init__.py  chunk_logger.py  document_processor.py  llm_client.py  logger.py  markdown_processor.py  schema_generator.py  schema_manager.py
